--- a/public/assets/css/card-style.css
+++ b/public/assets/css/card-style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 ul {
     margin: 0;
@@ -423,9 +424,9 @@ a {
     }
 }
 
-@media screen and (max-width: 420px){
+@media screen and (max-width: 419px){
     .save_contact a{
-        width: 48% !important;
+        width: 66% !important;
         margin: 5px 0px;
     }
 }
@@ -552,4 +553,32 @@ a {
 
 .loading-spinner.active {
     display: inline-block;
+}
+
+.social_media {
+    margin-bottom: 35px;
+}
+
+.social_media a {
+    display: block;
+    margin: 0;
+    font-weight: 400;
+    color: black;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    text-align: center;
+    font-size: 11px;
+    font-family: -apple-system, "Segoe UI", "Roboto", Arial, sans-serif;
+}
+
+#offcanvasCalculator {
+    height: 100%;
+}
+
+@media screen and (min-width:420px) {
+    .save_contact {
+        display: flex;
+        justify-content: space-evenly;
+    }
+
 }
