--- a/html/assets/css/main.css
+++ b/html/assets/css/main.css
@@ -102,7 +102,7 @@ body {
 .header {
     box-shadow: rgb(0 0 0 / 5%) 0px 1px 4px;
     background: #fff;
-    padding:5px 0px;
+    padding: 5px 0px;
 }
 
 .header .nav-link {
@@ -506,7 +506,7 @@ body {
 }
 
 .footer_menu ul li a:hover {
-   color: var(--white);
+    color: var(--white);
 }
 
 .footer_article p {
@@ -708,6 +708,121 @@ body {
 
 
 
+/* Authorization Modal  */
+
+.authorization_modal .modal-content {
+    border: none;
+    border-radius: 0px;
+}
+
+.authorization_modal .modal-header h1 {
+    text-align: center;
+    display: block;
+    width: 100%;
+    font-size: 18px !important;
+    font-weight: 800;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+}
+
+.authorization_modal .modal-header {
+    border: none;
+}
+
+.authorization_modal .modal-body p {
+    font-size: 13px;
+    margin-bottom: 15px;
+    line-height: 24px;
+    color: #666;
+}
+
+.authorization_modal .modal-body p {
+    font-size: 13px;
+    margin-bottom: 15px;
+    line-height: 24px;
+    color: #666;
+}
+
+.authorization_modal .input-group-text {
+    border: none !important;
+    padding: 0 !important;
+    background: transparent !important;
+    font-size: 13px;
+    font-weight: 600;
+    margin-right: 5px;
+    text-decoration: underline;
+    margin-bottom: 0;
+    height: 31px;
+}
+
+.authorization_modal .form-control {
+    outline: none !important;
+    box-shadow: none !important;
+    border: none;
+    border-bottom: 2px solid #e4e4e4;
+    border-radius: 0;
+    height: 23px;
+    padding: 0;
+}
+
+.authorization_modal h4 {
+    font-size: 15px;
+    margin: 0;
+    font-weight: 600;
+    color: #070707;
+}
+
+.authorization_modal .btn-primary {
+    background: var(--primary);
+    color: var(--white);
+    padding: 7px 34px;
+    font-size: 16px;
+    font-family: 'Inter', sans-serif;
+    border: none;
+    font-weight: 600;
+    border-radius: 3px;
+    transition: all 0.3s ease;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    box-shadow: rgb(99 99 99 / 20%) 0px 2px 8px 0px;
+}
+
+@media screen and (max-width:575px) {
+    .authorization_modal .input-group {
+        display: block;
+        position: inherit;
+    }
+
+    .authorization_modal .input-group-text {
+        display: block;
+        text-align: left;
+    }
+
+    .authorization_modal .form-control,
+    .authorization_modal .form-floating,
+    .authorization_modal .form-select {
+        width: 100%;
+    }
+
+    .authorization_modal .input-group-text {
+        height: 22px;
+    }
+
+
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 /* ==========================================================================
@@ -828,11 +943,11 @@ body {
     }
 
     a[href]::after {
-        content: " ("attr(href) ")";
+        content: " (" attr(href) ")";
     }
 
     abbr[title]::after {
-        content: " ("attr(title) ")";
+        content: " (" attr(title) ")";
     }
 
     /*
