--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1502,7 +1502,10 @@ body {
     line-height: 26px;
     background: #e9e9e9;
 }
-
+button.contactbtn.btn.btn-primary:hover {
+    background: #c62f00 !important;
+}
+.btn:hover{background: #c62f00 !important;}
 
 
 
